# vm-lifecycle

./: .gitignore  Makefile  README.md  config.yaml  pyproject.toml
.github/workflows/: tests.yml
infra/vm-archive/: main.tf
infra/vm-archive/scripts/: delete_old_images.sh
infra/vm-create/: main.tf  variables.tf
infra/vm-restore/: .terraform.lock.hcl  main.tf  variables.tf
scripts/: startup_ansible.sh
src/vm_lifecycle/: compute_manager.py  config_manager.py  main.py  params.py
src/vm_lifecycle/commands/: connect.py  create.py  destroy.py  profile.py  start.py  stop.py
tests/: test_archive.py  test_compute_manager.py  test_config.py  test_config_manager.py  test_create.py
tests/commands/: test_connect.py  test_create.py  test_destroy.py  test_profile.py  test_start.py  test_status.py  test_stop.py
vm_lifecycle/: compute_manager.py  config_manager.py  gcp_helpers.py  main.py  params.py  utils.py
vm_lifecycle/commands/: archive.py  config.py  connect.py  create.py  destroy.py  profile.py  restore.py  start.py  status.py  stop.py
vmlc/: main.py  utils.py
vmlc/commands/: archive.py  config.py  create.py  restore.py
