[tool.poetry]
name = "vm-lifecycle"
version = "0.4.1"
description = ""
authors = ["Lorcan Rae <lorcanrae@gmail.com>"]
readme = "README.md"
packages = [{ include = "vm_lifecycle", from = "src" }]

[tool.poetry.dependencies]
python = "^3.12"
click = "^8.1.8"
pyyaml = "^6.0.2"
google-api-python-client = "^2.170.0"
google-auth = "^2.40.2"
platformdirs = "^4.3.8"

[tool.poetry.scripts]
vmlc = 'vm_lifecycle.main:cli'

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-mock = "^3.14.0"
ruff = "^0.11.13"
pytest-cov = "^6.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
